<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/inspection_type"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:prompt="@string/spinner_title_home"
            android:tag="@string/spinner_title_home" />

        <Button
            android:id="@+id/inspectionButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/spinner1"
            android:layout_marginTop="25dp"
            android:text="@string/spinner_title_home" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:gravity="center_horizontal" android:background="@drawable/red_border">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:text="@string/vone"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/firstNameEditText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/first_name"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/lastNameEditText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <EditText
            android:id="@+id/emailEditText1"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_below="@+id/linearLayout1"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/email"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/initialsEditText1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/emailEditText1"
            android:layout_below="@+id/emailEditText1"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/intials" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="70dp"
            android:text="@string/team_members"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/initialsEditText1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:text="@string/vtwo"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/firstNameEditText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/lastNameEditText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <EditText
            android:id="@+id/emailEditText2"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout2"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/email"
            android:inputType="textEmailAddress" >

        </EditText>

        <EditText
            android:id="@+id/initialsEditText2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/emailEditText2"
            android:layout_below="@+id/emailEditText2"
            android:layout_centerVertical="true"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/intials" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/red_border"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:text="@string/important_dates"
            android:textSize="24sp" android:layout_marginRight="40dp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:text="@string/datetoday"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dateTodayEditText"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="20dip"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/date"
            android:inputType="date" android:focusableInTouchMode="false"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dateTodayEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:text="@string/compliance_date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dateComplianceEditText"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="20dip"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/blank"
            android:inputType="date" android:focusableInTouchMode="false"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/dateComplianceEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:text="@string/rewalk_date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dateRewalkEditText"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_marginTop="20dip"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/blank"
            android:inputType="date" android:focusableInTouchMode="false"/>

        <Button
            android:id="@+id/homeNextButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="23dp"
            android:layout_marginLeft="23dp"
            android:layout_toRightOf="@+id/textView7"
            android:text="Next" android:clickable="false" android:focusable="false" android:focusableInTouchMode="false"/>

    </RelativeLayout>

</LinearLayout>