<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/MainLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/buttonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

            <LinearLayout
                android:id="@+id/buttonLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/homeButton"
                    android:layout_width="60dip"
                    android:layout_height="40dip"
                    android:layout_weight="1"
                    android:text="Home" />

                <Button
                    android:id="@+id/assignedButton"
                    android:layout_width="60dip"
                    android:layout_height="40dip"
                    android:layout_toRightOf="@+id/homeButton"
                    android:layout_weight="1"
                    android:text="Assigned" />

                <Button
                    android:id="@+id/formButton"
                    android:layout_width="60dip"
                    android:layout_height="40dip"
                    android:layout_toRightOf="@+id/assignedButton"
                    android:layout_weight="1"
                    android:text="Form" />

                <Button
                    android:id="@+id/pictureButton"
                    android:layout_width="60dip"
                    android:layout_height="40dip"
                    android:layout_toRightOf="@+id/formButton"
                    android:layout_weight="1"
                    android:text="Picture" />

                <Button
                    android:id="@+id/completedButton"
                    android:layout_width="60dip"
                    android:layout_height="40dip"
                    android:layout_toRightOf="@+id/pictureButton"
                    android:layout_weight="1"
                    android:text="Completed" />

                <Button
                    android:id="@+id/adminButton"
                    android:layout_width="60dip"
                    android:layout_height="40dip"
                    android:layout_toRightOf="@+id/completedButton"
                    android:layout_weight="1"
                    android:text="Admin" />

                <Button
                    android:id="@+id/helpButton"
                    android:layout_width="60dip"
                    android:layout_height="40dip"
                    android:layout_toRightOf="@+id/adminButton"
                    android:layout_weight="1"
                    android:text="Help" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/leftTextView"
            android:layout_width="140dip"
            android:layout_height="fill_parent"
            android:layout_above="@+id/bottomTextView"
            android:layout_below="@+id/buttonLayout"
            android:background="@drawable/white_border_right"
            android:text="@string/homeinfo" />

        <LinearLayout
            android:id="@+id/MainLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottomTextView"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/leftTextView"
            android:layout_toRightOf="@+id/leftTextView" >

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <RelativeLayout
                    android:id="@+id/relativeLayout4"
                    android:layout_width="450dip"
                    android:layout_height="180dip"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="15dp"
                    android:background="@drawable/white_border_space" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="Important Dates" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="20dip"
                        android:layout_marginTop="60dip"
                        android:text="@string/datetoday"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/textView6"
                        android:layout_marginLeft="20dip"
                        android:layout_marginTop="40dip"
                        android:text="@string/compliance_date"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/dateComplianceEditText"
                        android:layout_width="225dip"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/textView7"
                        android:layout_alignLeft="@+id/textView3"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/date"
                        android:inputType="date" >

                        <requestFocus />
                    </EditText>

                    <EditText
                        android:id="@+id/dateTodayEditText"
                        android:layout_width="225dip"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/textView6"
                        android:layout_alignLeft="@+id/textView3"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="date" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout3"
                    android:layout_width="340dip"
                    android:layout_height="350dip"
                    android:layout_above="@+id/relativeLayout4"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="39dp"
                    android:layout_toRightOf="@+id/relativeLayout4"
                    android:background="@drawable/white_border_space"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="Team Members" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/vone"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/linearLayout1"
                        android:layout_width="325dip"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/textView8"
                        android:orientation="horizontal" android:layout_marginTop="-15dp">

                        <EditText
                            android:id="@+id/firstNameEditText1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="20dip"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/first_name"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/lastNameEditText1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="20dip"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/last_name"
                            android:inputType="textPersonName" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/emailEditText1"
                        android:layout_width="325dip"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/linearLayout1"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/linearLayout1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dip"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/emailEditText1"
                        android:layout_centerHorizontal="true"
                        android:text="@string/vtwo"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="325dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignRight="@+id/linearLayout1"
                        android:layout_below="@+id/textView4"
                        android:orientation="horizontal" android:layout_marginTop="-15dp">

                        <EditText
                            android:id="@+id/firstNameEditText2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="20dip"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/first_name"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/lastNameEditText2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="20dip"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/last_name"
                            android:inputType="textPersonName" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/emailEditText2"
                        android:layout_width="325dp"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/linearLayout2"
                        android:layout_alignRight="@+id/linearLayout1"
                        android:layout_below="@+id/linearLayout2"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </RelativeLayout>

                <Button
                    android:id="@+id/homeNextButton"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignBottom="@+id/relativeLayout4"
                    android:layout_alignRight="@+id/relativeLayout3"
                    android:background="@color/green"
                    android:text="Next" />

                <RelativeLayout
                    android:id="@+id/relativeLayout2"
                    android:layout_width="200dip"
                    android:layout_height="120dip"
                    android:layout_alignLeft="@+id/relativeLayout4"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/relativeLayout4"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="69dp"
                    android:background="@drawable/white_border_space" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="Inspection Type" />

                    <Button
                        android:id="@+id/inspectionButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/textView1"
                        android:layout_alignRight="@+id/textView1"
                        android:layout_centerVertical="true"
                        android:text="@string/spinner_title_home" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/bottomTextView"
            android:layout_width="fill_parent"
            android:layout_height="20sp"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/textView1"
            android:background="@drawable/white_border_top"
            android:text="       Designed by: Wayne Glover Version 1.2" />
    </RelativeLayout>

</LinearLayout>